# llm-council

./: AGENTS.md  README.md  Task List for Upgrading Council +  pyproject.toml
backend/: config.py  council.py  main.py  openrouter.py  retrieval.py  storage.py
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  Stage1.css  Stage1.jsx
tests/: conftest.py  test_council_prompts.py  test_retrieval.py
