[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "feedparser>=6.0.10",
    "paper-qa>=5.0.0",
    "langchain-openai>=0.1.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
]
